pulseaudio-policy-enforcement (0.5.19) unstable; urgency=low

  * source-output-ext is now updated with the chnages that were made for
    sink-input-ext.c. This includes the source_route flag and the pre-routing
    (ie. overriding the traget source of source-output before it were actually
    created).
    the source-output to the act
  * removed the double "dbusif.c: dbusif.c:" from debug logs

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Wed, 06 May 2009 13:40:00 +0300

pulseaudio-policy-enforcement (0.5.18) unstable; urgency=low

  * Bumped version for the latest pulseaudio co-release.

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 23 Apr 2009 15:55:00 +0200

pulseaudio-policy-enforcement (0.5.17) unstable; urgency=low

  * Bumped version for the latest pulseaudio co-release.

 -- Krisztian Litkey <krisztian.litkey@nokia.com>  Mon, 20 Apr 2009 15:24:09 +0200

pulseaudio-policy-enforcement (0.5.16) unstable; urgency=low

  * directing streams to the right sink in pre-hook instead of post-hook.
    This eliminates a possible stream moving between sinks, eg. between
    sink.music and sink.voice.raw

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Mon, 06 Apr 2009 17:10:00 +0200

pulseaudio-policy-enforcement (0.5.15) unstable; urgency=low

  * changes for the new PA

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Tue, 02 Apr 2009 15:09:00 +0200

pulseaudio-policy-enforcement (0.5.14) unstable; urgency=low

  * introducing the 'set_sink' flag for initial, static routing (eg. for
    routing system sounds directly to sink.voice.raw)

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Mon, 30 Mar 2009 15:12:00 +0200

pulseaudio-policy-enforcement (0.5.13) unstable; urgency=low

  * version placeholder for possible pulseaudio release.

 -- Janos Kovacs <janos.f.kovacs@nokia.com>  Thu, 19 Mar 2009 20:48:00 +0200

pulseaudio-policy-enforcement (0.5.12) unstable; urgency=low

  * allowing any stream (ie. sink-input/source/output) property to use