@@ -1,5 +1,6 @@
 pulseaudio-policy-enforcement (0.5.19) unstable; urgency=low
 
+  [ Janos Kovacs ]
   * source-output-ext is now updated with the chnages that were made for
     sink-input-ext.c. This includes the source_route flag and the pre-routing
     (ie. overriding the traget source of source-output before it were actually
@@ -7,7 +8,10 @@ pulseaudio-policy-enforcement (0.5.19) unstable; urgency=low
     the source-output to the act
   * removed the double "dbusif.c: dbusif.c:" from debug logs
 
- -- Janos Kovacs <janos.f.kovacs@nokia.com>  Wed, 06 May 2009 13:40:00 +0300
+  [ Ismo Puustinen ]
+  * Don't send status signals if transaction ID is 0.
+
+ -- Ismo Puustinen <ismo.h.puustinen@nokia.com>  Thu, 07 May 2009 13:42:21 +0300
 
 pulseaudio-policy-enforcement (0.5.18) unstable; urgency=low
 
